--- a/PM.html
+++ b/PM.html
@@ -139,7 +139,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="carousel_bg" style="background: #fff;height:auto">
+            <div class="carousel_bg" style="background: #fff;height:auto;margin-top: 0;">
                 <h2 class="primary">每一个项目更简单高效</h2>
                 <p>实现沟通、计划、分析、立项、文档等全面管理，项目过程可视化、流程化、自动化、满足个性化得、优化的项目管理需求。</p>
                 <script>
