--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <div class="banner_box">
             <div class="banner">
                 <div class="content_title_box">
-                    <div class="content_title" style="top:263px;right:0;width: 520px;">
+                    <div class="content_title" style="top:263px;right:0;width: 520px;display: flex; flex-direction: column;align-items: flex-end">
                         <h2 style="font-size: 48px">智能企业工作平台</h2>
                         <h2
-                            style="font-size: 34px;margin-top: 26px;margin-bottom: 41px;font-weight:300;color:rgba(241,241,241,1);">
+                            style="font-size: 32px;margin-top: 26px;margin-bottom: 41px;font-weight:300;color:rgba(241,241,241,1);">
                             一个平台，让办公立马简单</h2>
                         <div class="header_input">
                             <input type="text" class="input_kw">
@@ -54,7 +54,7 @@
                                 <a href="OA.html">智慧OA</a>
                                 <i class="yuan_hover_icon1"></i>
                             </div>
-                            <img src="images/index/y1.png">
+                            <img src="images/index/y11.png">
 
                         </div>
                         <div id="yuan2">
@@ -515,13 +515,13 @@
                         <p class="fun_item_c">管理会议，让会议有传达、有分解、有结果</p>
                     </div>
                     <div class="fun_item">
-                        <img src="images/index/fun_icon2.png">
+                        <img src="images/index/fun_icon2.png" style="margin-top: 5px; margin-bottom: 5px;">
                         <p class="fun_item_t">不一样的安全邮箱</p>
                         <p class="fun_item_c"> 提高邮箱数据安全性，优化你的邮箱体验</p>
                     </div>
                     <div class="fun_item">
-                        <img src="images/index/fun_icon3.png">
-                        <p class="fun_item_t">随时随地闪速协同</p>
+                        <img src="images/index/fun_icon3.png" width="95px" height="116px">
+                        <p class="fun_item_t" style="margin-top: 21px">随时随地闪速协同</p>
                         <p class="fun_item_c">快速沟通，智能通讯，平台信息化预警</p>
                     </div>
                     <div class="fun_item">
@@ -530,13 +530,13 @@
                         <p class="fun_item_c"> 大幅度为企业降低通讯成本简单拨号，快速协同</p>
                     </div>
                     <div class="fun_item">
-                        <img src="images/index/fun_icon5.png" style="margin-top: 16px;margin-bottom: 16px">
+                        <img src="images/index/fun_icon5.png" style="margin-top: 32px;margin-bottom: 0px">
                         <p class="fun_item_t">无门槛的分享平台</p>
                         <p class="fun_item_c">部门分享，可沉淀、复制的工作经验</p>
                     </div>
                     <div class="fun_item">
                         <img src="images/index/fun_icon6.png">
-                        <p class="fun_item_t">高效安全多人群聊</p>
+                        <p class="fun_item_t" style="margin-top: 48px">高效安全多人群聊</p>
                         <p class="fun_item_c"> 组织内实名制聊天，高效传达，群聊信息不丢失</p>
                     </div>
                 </div>
@@ -594,7 +594,7 @@
         </div>
 
         <div class="industry_waice">
-            <div class="industry_box" style="margin-top: 0">
+            <div class="industry_box" style="margin-top: 0;padding: 0 20px">
                 <h2 class="index_title" style="color:#fff">专属的企业解决方案，你需要的都在这里</h2>
                 <div class="industry">
                     <div class="industry_img">
@@ -613,10 +613,10 @@
                         </div>
                     </div>
                     <div class="industry_btn">
-                        <div class="btn_show">地产行业 <i></i></div>
-                        <div class="">制造行业 <i></i></div>
-                        <div class="">商贸行业 <i></i></div>
-                        <div class="">服装行业 <i></i></div>
+                        <div class="btn_show">地产行业</div>
+                        <div class="">制造行业</div>
+                        <div class="">商贸行业</div>
+                        <div class="">服装行业</div>
                     </div>
                 </div>
             </div>
