--- a/CRM.html
+++ b/CRM.html
@@ -12,15 +12,45 @@
     <link rel="stylesheet" href="css/OA.css">
     <link rel="stylesheet" href="css/OA_header.css">
     <link rel="stylesheet" href="css/OA_footer.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <script src="js/swiper.min.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- <script src="js/swiper3.min.js"></script> -->
     <script src="js/global.js"></script>
     <style>
-        .swiper-container{
+        /* .swiper-container{
             overflow-x: hidden;
             height: 100% !important;
+        } */
+        .swiper-container {
+            width: 100%;
+            height: 100%;
+        }
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            display: -webkit-box;
+            display: -ms-flexbox;
+            display: -webkit-flex;
+            display: flex;
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            -webkit-justify-content: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            -ms-flex-align: center;
+            -webkit-align-items: center;
+            align-items: center;
+            transition: 300ms;
+            transform: scale(0.8);
+            width: 337px;
+            height: 581px;
+        }
+
+        .swiper-slide-active,
+        .swiper-slide-duplicate-active {
+            transform: scale(1);
         }
     </style>
 </head>
@@ -46,7 +76,7 @@
             <p>云创CRM客户管理系统，覆盖客户销售、客户营销、客户服务的全生命周期管
                 理，智能管理业务流程，激发业绩持续增长。</p>
             <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
-            <div class="swiper-container-solution" style="margin-bottom: 120px">
+            <div class="swiper-container-solution" style="margin-bottom: 100px">
                 <div class="selected-solution">
                     <div>
                         <div class="swiper-container">
@@ -76,48 +106,34 @@
             <p>实现从线索到回款的全流程管理，让企业借助云创CRM管理客户关系、销售过程、营销活动
                 以及服务支持，完成更多销售业绩。</p>
             <script>
-                $(function () {
-                    new Swiper(".swiper-container", {
+                // $(function () {
+                //     new Swiper(".swiper-container", {
 
-                        //默认功能属性
-                        speed: 300,
-                        slidesPerView: 3,
-                        spaceBetween: 0,
-                        slidesPerGroup: 1,
-                        loop: true,
-                        autoplay: true,
+                //         //默认功能属性
+                //         speed: 300,
+                //         slidesPerView: 3,
+                //         spaceBetween: 0,
+                //         slidesPerGroup: 1,
+                //         loop: true,
+                //         autoplay: true,
 
-                        //分页索引
-                        pagination: {
-                            el: ".swiper-pagination",
-                            clickable: true
-                        },
-                    });
-                })
-                
-                // var mySwiper = new Swiper('.swiper-container', {
-                //     // direction: 'vertical', // 垂直切换选项
-                //     loop: true, // 循环模式选项
-                //     autoplay: true,
-                //     // 如果需要分页器
-                //     pagination: {
-                //         el: '.swiper-pagination',
-                //         type: 'bullets',
-                //         progressbarOpposite: true,
-                //     },
-
-                //     // 如果需要前进后退按钮
-                //     navigation: {
-                //         nextEl: '.swiper-button-next',
-                //         prevEl: '.swiper-button-prev',
-                //     },
-                //     // slidesOffsetBefore : 100,
-                //     slidesPerView: 2,
-                //     centeredSlides: true,
-                //     onSlideChangeEnd: function (swiper) {
-                //         alert(swiper.activeIndex) //切换结束时，告诉我现在是第几个slide
-                //     }
+                //         //分页索引
+                //         pagination: {
+                //             el: ".swiper-pagination",
+                //             clickable: true
+                //         },
+                //     });
                 // })
+                var swiper = new Swiper('.swiper-container', {
+                    slidesPerView: 3,
+                    spaceBetween: 30,
+                    centeredSlides: true,
+                    loop: true,
+                    pagination: {
+                        el: '.swiper-pagination',
+                        clickable: true,
+                    },
+                });
             </script>
         </div>
         <div class="OA_detail_container" style="margin-top: 373px">
