--- a/OA.html
+++ b/OA.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <div class="carousel_bg">
+        <div class="carousel_bg" style="margin-top: 114px;padding-top:68px">
             <h2 class="primary">让协同办公简单高效</h2>
             <p>云创智慧OA将日程管理、移动审批、考勤、汇报、采购等功能融合升级，提供便捷的智慧办公体验，使办公协同更高效，助理企业智慧化转型。</p>
             <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
@@ -68,7 +68,7 @@
         </div>
         <div class="OA_detail_container">
             <div class="OA_detail"
-                style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 70% 100%;">
+                style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 70% 100%;margin-top:121px">
                 <div class="OA_card">
                     <div id="leftout1" class="OA_card_left opcity">
                         <img src="images/OA/left1.png" width="120px" height="88px">
