--- a/study.html
+++ b/study.html
@@ -69,7 +69,7 @@
             <p>丰富的课程资源，多元的学习入口，场景化得学习社区，全面加速企业人才培训和绩效转化，让企业都拥有专属商学院。</p>
             <a href="#" class="bg_primary tiyan_btn" style="color: #fff">免费体验</a>
 
-            <div class="swiper-container-solution" style="margin-bottom: 120px">
+            <div class="swiper-container-solution" style="margin-bottom: 64px">
                 <div class="selected-solution">
                     <div>
                         <div class="swiper-container">
@@ -111,7 +111,7 @@
                 });
             </script>
         </div>
-        <div class="OA_detail_container">
+        <div class="OA_detail_container" style="margin-top: 130px">
             <div class="OA_detail"
                 style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 70% 100%;margin-top: 200px;">
                 <div class="OA_card">
