--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
                 <h2 class="index_title">办公效率太低？云创办公助您升级</h2>
                 <div class="progress">
                     <ul class="progress_title">
-                        <li class="show_border"><a href="#">系统太多，运营成本水涨船高</a></li>
-                        <li><a href="#">系统太多，运营成本水涨船高</a></li>
-                        <li><a href="#">信息不通，部门推诿踢皮球</a></li>
-                        <li><a href="#">数据表格一大堆，谁看谁头痛 </a></li>
-                        <li><a href="#">客户商机如何找？销售一问三不知</a></li>
+                        <li class="show_border"><a href="javascript:;">系统太多，运营成本水涨船高</a></li>
+                        <li><a href="javascript:;">系统太多，运营成本水涨船高</a></li>
+                        <li><a href="javascript:;">信息不通，部门推诿踢皮球</a></li>
+                        <li><a href="javascript:;">数据表格一大堆，谁看谁头痛 </a></li>
+                        <li><a href="javascript:;">客户商机如何找？销售一问三不知</a></li>
                     </ul>
                     <div class="progress_r">
                         <ul class="fenduan">
@@ -609,7 +609,7 @@
                                 数据进行系统整理、记录、分析，以直观的形式
                                 展现给用户各种商业数据让数据价值清晰可见。
                             </p>
-                            <a href="#" class="i_btn">了解更多</a>
+                            <a href="javascript:;" class="i_btn">了解更多</a>
                         </div>
                     </div>
                     <div class="industry_btn">
