--- a/HRM.html
+++ b/HRM.html
@@ -41,7 +41,7 @@
     <div class="contianer">
         <div id="header" class="header">
         </div>
-        <div class="content" style="background: url('./images/HRM/bg.png') no-repeat;background-size: 100% 100%;">
+        <div class="content" style="background: url('./images/HRM/bg.png') no-repeat;background-size:cover;">
             <div class="content_title_box">
                 <div class="content_title">
                     <h2>云创HRM</h2>
