--- a/OA.html
+++ b/OA.html
@@ -22,7 +22,7 @@
     <div class="contianer">
         <div id="header" class="header">
         </div>
-        <div class="content" style="background: url('./images/OA/bg.png') no-repeat;background-size:cover">
+        <div class="content" style="background: url('./images/OA/bg.png') no-repeat center center;background-size:cover;">
             <div class="content_title_box">
                 <div class="content_title">
                     <h2>云创智慧</h2>
