--- a/CRM.html
+++ b/CRM.html
@@ -59,7 +59,7 @@
     <div class="contianer">
         <div id="header" class="header">
         </div>
-        <div class="content" style="background: url('./images/CRM/bg.png') no-repeat;background-size: cover">
+        <div class="content" style="background: url('./images/CRM/bg.png') no-repeat center center;background-size: cover">
             <div class="content_title_box">
                 <div class="content_title" style="right: 160px">
                     <h2>云创CRM</h2>
