--- a/study.html
+++ b/study.html
@@ -55,7 +55,7 @@
     <div class="contianer">
         <div id="header" class="header">
         </div>
-        <div class="content" style="background: url('./images/study/bg.png') no-repeat;background-size: cover">
+        <div class="content" style="background: url('./images/study/bg.png') no-repeat center center;background-size: cover">
             <div class="content_title_box">
                 <div class="content_title">
                     <h2>云创企业培训平台</h2>
