--- a/CRM.html
+++ b/CRM.html
@@ -61,7 +61,7 @@
         </div>
         <div class="content" style="background: url('./images/CRM/bg.png') no-repeat center center;background-size: cover">
             <div class="content_title_box">
-                <div class="content_title" style="right: 160px">
+                <div class="content_title" style="right: 160px;top: 188px">
                     <h2>云创CRM</h2>
                     <h2>客户管理系统</h2>
                     <p>
@@ -106,29 +106,12 @@
             <p>实现从线索到回款的全流程管理，让企业借助云创CRM管理客户关系、销售过程、营销活动
                 以及服务支持，完成更多销售业绩。</p>
             <script>
-                // $(function () {
-                //     new Swiper(".swiper-container", {
-
-                //         //默认功能属性
-                //         speed: 300,
-                //         slidesPerView: 3,
-                //         spaceBetween: 0,
-                //         slidesPerGroup: 1,
-                //         loop: true,
-                //         autoplay: true,
-
-                //         //分页索引
-                //         pagination: {
-                //             el: ".swiper-pagination",
-                //             clickable: true
-                //         },
-                //     });
-                // })
                 var swiper = new Swiper('.swiper-container', {
                     slidesPerView: 3,
                     spaceBetween: 30,
                     centeredSlides: true,
                     loop: true,
+                    autoplay:true,
                     pagination: {
                         el: '.swiper-pagination',
                         clickable: true,
@@ -155,7 +138,7 @@
                     </div>
                 </div>
 
-                <div class="OA_card OA_reverse">
+                <div class="OA_card OA_reverse card_mr">
                     <div class="opcity" id="rightout2" style="width: 445px;height: 264px;">
                         <img src="images/CRM/right2.png">
                     </div>
@@ -184,7 +167,7 @@
                         <img src="images/CRM/right3.png">
                     </div>
                 </div>
-                <div class="OA_card OA_reverse">
+                <div class="OA_card OA_reverse card_mr">
                     <div class="opcity" id="rightout4" style="width: 451px;height:331px">
                         <img src="images/CRM/right4.png">
                     </div>
