--- a/HRM.html
+++ b/HRM.html
@@ -16,25 +16,6 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <!-- <script src="js/swiper3.min.js"></script> -->
     <script src="js/global.js"></script>
-    <style>
-        /* .swiper-container{
-            width: 100%;
-            height: 350px;
-            margin-bottom: 60px;
-        }
-        .swiper-slide{
-            width: 608px;
-            height: 354px;
-        }
-        .swiper-button-prev{
-            left: 290px;
-            transform: scale(0.5)
-        }
-        .swiper-button-next{
-            right: 290px;
-            transform: scale(0.5)
-        } */
-    </style>
 </head>
 
 <body>
@@ -43,7 +24,7 @@
         </div>
         <div class="content" style="background: url('./images/HRM/bg.png') no-repeat center center;background-size:cover;">
             <div class="content_title_box">
-                <div class="content_title">
+                <div class="content_title c_t_left" style="top:189px">
                     <h2>云创HRM</h2>
                     <h2>人力资源管理系统</h2>
                     <p>
@@ -90,7 +71,7 @@
         <div class="OA_detail_container" style="margin-top: 215px">
             <div class="OA_detail"
                 style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 70% 100%;padding-top: 0;margin-top: 123px;">
-                <div class="OA_card">
+                <div class="OA_card card_ml">
                     <div class="OA_card_left opcity" id="leftout1">
                         <img src="images/HRM/left1.png" width="130px" height="100px">
                         <h2 class="OA_title">智能招聘</h2>
@@ -124,7 +105,7 @@
                     </div>
 
                 </div>
-                <div class="OA_card">
+                <div class="OA_card card_ml">
                     <div class="OA_card_left opcity" id="leftout3">
                         <img src="images/HRM/left3.png" width="130px" height="100px">
                         <h2 class="OA_title">智能薪酬</h2>
@@ -159,7 +140,7 @@
                     </div>
 
                 </div>
-                <div class="OA_card">
+                <div class="OA_card card_ml">
 
                     <div class="OA_card_left opcity" id="leftout5">
                         <img src="images/HRM/left5.png" width="130px" height="100px">
