--- a/OA.html
+++ b/OA.html
@@ -24,7 +24,7 @@
         </div>
         <div class="content" style="background: url('./images/OA/bg.png') no-repeat center center;background-size:cover;">
             <div class="content_title_box">
-                <div class="content_title">
+                <div class="content_title c_t_left" style="top:184px">
                     <h2>云创智慧</h2>
                     <h2>OA系统</h2>
                     <p>全面解决办公协同需求<br />支撑部门高效协作</p>
@@ -70,7 +70,7 @@
             <div class="OA_detail"
                 style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 70% 100%;margin-top:121px">
                 <div class="OA_card">
-                    <div id="leftout1" class="OA_card_left opcity">
+                    <div id="leftout1" class="OA_card_left opcity card_ml">
                         <img src="images/OA/left1.png" width="120px" height="88px">
                         <h2 class="OA_title">日程汇总</h2>
                         <p class="OA_subtitle">时间管理更有效</p>
@@ -99,7 +99,7 @@
 
                 </div>
                 <div class="OA_card">
-                    <div id="leftout3" class="OA_card_left opcity">
+                    <div id="leftout3" class="OA_card_left opcity card_ml">
                         <img src="images/OA/left3.png" width="119px" height="87px">
                         <h2 class="OA_title">简化考勤</h2>
                         <p class="OA_subtitle">月末统计无烦恼</p>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="OA_card">
 
-                    <div id="leftout5" class="OA_card_left opcity">
+                    <div id="leftout5" class="OA_card_left opcity card_ml">
                         <img src="images/OA/left5.png" width="96px" height="92px">
                         <h2 class="OA_title">线上采购</h2>
                         <p class="OA_subtitle">流程追溯有保障</p>
