--- a/PM.html
+++ b/PM.html
@@ -109,7 +109,7 @@
         </div>
         <div class="content" style="background: url('./images/PM/bg.png') no-repeat center center;background-size: cover;">
             <div class="content_title_box">
-                <div class="content_title" style="right: 160px">
+                <div class="content_title" style="right: 160px;top: 188px">
                     <h2>云创PM</h2>
                     <h2>项目管理系统</h2>
                     <p>
@@ -175,7 +175,7 @@
                     </div>
                 </div>
 
-                <div class="OA_card OA_reverse">
+                <div class="OA_card OA_reverse card_mr">
                     <div class="opcity" id="rightout2" style="width:438px;height:279px">
                         <img src="images/PM/right2.png">
                     </div>
@@ -208,7 +208,7 @@
                         <img src="images/PM/right3.png">
                     </div>
                 </div>
-                <div class="OA_card OA_reverse">
+                <div class="OA_card OA_reverse card_mr">
                     <div class="opcity" id="rightout4" style="width:466px;height:308px">
                         <img src="images/PM/right4.png">
                     </div>
