--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         /*    transform: scale(1.1);*/
         /*    !* z-index: 9; *!*/
         /*}*/
-        .neiyuan img:hover{
+        .neiyuan img:hover {
             transform: scale(1.1);
         }
     </style>
@@ -36,7 +36,7 @@
         <div class="banner_box">
             <div class="banner">
                 <div class="content_title_box">
-                    <div class="content_title" style="top:263px;right:0;width: 520px;display: flex; flex-direction: column;align-items: flex-end">
+                    <div class="content_title banner_weitiao">
                         <h2 style="font-size: 48px">智能企业工作平台</h2>
                         <h2
                             style="font-size: 32px;margin-top: 26px;margin-bottom: 41px;font-weight:300;color:rgba(241,241,241,1);">
@@ -510,34 +510,64 @@
                 <h2 class="index_title">便捷的沟通工具，快速反应，及时反馈</h2>
                 <div class="fun_list">
                     <div class="fun_item">
-                        <img src="images/index/fun_icon1.png">
-                        <p class="fun_item_t">你的全能会议助手</p>
-                        <p class="fun_item_c">管理会议，让会议有传达、有分解、有结果</p>
+                        <div>
+                            <img src="images/index/fun_icon1.png" width="124px" height="98px">
+                        </div>
+                        <div>
+                            <p class="fun_item_t">你的全能会议助手</p>
+                            <p class="fun_item_c">管理会议，让会议有传达、有分解、有结果</p>
+                        </div>
                     </div>
                     <div class="fun_item">
-                        <img src="images/index/fun_icon2.png" style="margin-top: 5px; margin-bottom: 5px;">
-                        <p class="fun_item_t">不一样的安全邮箱</p>
-                        <p class="fun_item_c"> 提高邮箱数据安全性，优化你的邮箱体验</p>
+                        <div>
+                            <img src="images/index/fun_icon2.png" width="124px" height="98px">
+                        </div>
+                        <div>
+                            <p class="fun_item_t">不一样的安全邮箱</p>
+                            <p class="fun_item_c"> 提高邮箱数据安全性，优化你的邮箱体验</p>
+                        </div>
                     </div>
                     <div class="fun_item">
-                        <img src="images/index/fun_icon3.png" width="95px" height="116px">
-                        <p class="fun_item_t" style="margin-top: 21px">随时随地闪速协同</p>
-                        <p class="fun_item_c">快速沟通，智能通讯，平台信息化预警</p>
+                        <div>
+                            <img src="images/index/fun_icon3.png" width="95px" height="116px">
+                        </div>
+                        <div>
+                            <p class="fun_item_t" style="margin-top: 21px">随时随地闪速协同</p>
+                            <p class="fun_item_c">快速沟通，智能通讯，平台信息化预警</p>
+                        </div>
+
                     </div>
                     <div class="fun_item">
-                        <img src="images/index/fun_icon4.png">
-                        <p class="fun_item_t">5G时代的网络通话</p>
-                        <p class="fun_item_c"> 大幅度为企业降低通讯成本简单拨号，快速协同</p>
+                        <div>
+                            <img src="images/index/fun_icon4.png" width="119px" height="102px">
+                        </div>
+
+                        <div>
+                            <p class="fun_item_t">5G时代的网络通话</p>
+                            <p class="fun_item_c"> 大幅度为企业降低通讯成本简单拨号，快速协同</p>
+                        </div>
+
                     </div>
                     <div class="fun_item">
-                        <img src="images/index/fun_icon5.png" style="margin-top: 32px;margin-bottom: 0px">
-                        <p class="fun_item_t">无门槛的分享平台</p>
-                        <p class="fun_item_c">部门分享，可沉淀、复制的工作经验</p>
+                        <div>
+                            <img src="images/index/fun_icon5.png" width="125px" height="70px">
+                        </div>
+                        <div>
+                            <p class="fun_item_t">无门槛的分享平台</p>
+                            <p class="fun_item_c">部门分享，可沉淀、复制的工作经验</p>
+                        </div>
+
                     </div>
                     <div class="fun_item">
-                        <img src="images/index/fun_icon6.png">
-                        <p class="fun_item_t" style="margin-top: 48px">高效安全多人群聊</p>
-                        <p class="fun_item_c"> 组织内实名制聊天，高效传达，群聊信息不丢失</p>
+                        <div>
+                            <img src="images/index/fun_icon6.png" width="113px" height="94px">
+                        </div>
+
+                        <div>
+                            <p class="fun_item_t" style="margin-top: 48px">高效安全多人群聊</p>
+                            <p class="fun_item_c"> 组织内实名制聊天，高效传达，群聊信息不丢失</p>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -651,7 +681,6 @@
             <div class="pattern_yinying"></div>
         </div>
         
-
         <div id="footer"></div>
     </div>
 </body>
