--- a/study.html
+++ b/study.html
@@ -57,7 +57,7 @@
         </div>
         <div class="content" style="background: url('./images/study/bg.png') no-repeat center center;background-size: cover">
             <div class="content_title_box">
-                <div class="content_title">
+                <div class="content_title c_t_left" style="top:216px">
                     <h2>云创企业培训平台</h2>
                     <p>一个学习型企业的标配</p>
                     <a class="primary tiyan_btn" style="background:rgba(246,249,254,1);" href="#">免费体验</a>
@@ -104,6 +104,7 @@
                     spaceBetween: 30,
                     centeredSlides: true,
                     loop: true,
+                    autoplay:true,
                     pagination: {
                         el: '.swiper-pagination',
                         clickable: true,
@@ -114,7 +115,7 @@
         <div class="OA_detail_container" style="margin-top: 130px">
             <div class="OA_detail"
                 style="background: url('./images/index/radius.png') no-repeat 100% 0;background-size: 70% 100%;margin-top: 200px;">
-                <div class="OA_card">
+                <div class="OA_card card_ml">
                     <div class="OA_card_left opcity" id="leftout1">
                         <img src="images/study/left1.png" width="140px" height="110px">
                         <h2 class="OA_title">课程管理</h2>
@@ -144,7 +145,7 @@
                     </div>
 
                 </div>
-                <div class="OA_card">
+                <div class="OA_card card_ml">
                     <div class="OA_card_left opcity" id="leftout3">
                         <img src="images/study/left3.png" width="115px" height="95px">
                         <h2 class="OA_title">学习社区</h2>
@@ -173,7 +174,7 @@
                     </div>
 
                 </div>
-                <div class="OA_card">
+                <div class="OA_card card_ml">
 
                     <div class="OA_card_left opcity" id="leftout5">
                         <img src="images/study/left5.png" width="137px" height="92px">
