--- a/index.html
+++ b/index.html
@@ -681,7 +681,8 @@
             <div class="pattern_yinying"></div>
         </div>
         
-        <div id="footer"></div>
+        <div id="footer">
+        </div>
     </div>
 </body>
 
